kubernetes-manifests/loadgenerator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator-online-boutique
  namespace: online-boutique
  labels:
    app: loadgenerator-online-boutique
spec:
  selector:
    matchLabels:
      app: loadgenerator-online-boutique
  replicas: 1
  template:
    metadata:
      labels:
        app: loadgenerator-online-boutique
    spec:
      serviceAccountName: loadgenerator-online-boutique
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
        - name: dockerhub-key
      containers:
      - name: main
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
        image: kihpn1711/loadgenerator:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 300m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
