kubernetes-manifests/cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice-online-boutique
  namespace: online-boutique
  labels:
    app: cartservice-online-boutique
spec:
  selector:
    matchLabels:
      app: cartservice-online-boutique
  template:
    metadata:
      labels:
        app: cartservice-online-boutique
    spec:
      serviceAccountName: cartservice-online-boutique
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
        - name: dockerhub-key
      containers:
      - name: server
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
        image: kihpn1711/cartservice:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 7070
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 128Mi
        readinessProbe:
          initialDelaySeconds: 15
          grpc:
            port: 7070
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          grpc:
            port: 7070
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice-online-boutique
  namespace: online-boutique
  labels:
    app: cartservice-online-boutique
spec:
  type: ClusterIP
  selector:
    app: cartservice-online-boutique
  ports:
  - name: grpc
    port: 7070
    targetPort: 7070
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart-online-boutique
  namespace: online-boutique
  labels:
    app: redis-cart-online-boutique
spec:
  selector:
    matchLabels:
      app: redis-cart-online-boutique
  template:
    metadata:
      labels:
        app: redis-cart-online-boutique
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: redis
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
        image: redis:alpine
        ports:
        - containerPort: 6379
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
        resources:
          requests:
            cpu: 70m
            memory: 200Mi
          limits:
            cpu: 125m
            memory: 256Mi
      volumes:
      - name: redis-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart-online-boutique
  namespace: online-boutique
  labels:
    app: redis-cart-online-boutique
spec:
  type: ClusterIP
  selector:
    app: redis-cart-online-boutique
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: 6379
