kubernetes-manifests/checkoutservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice-online-boutique
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: checkoutservice-online-boutique
  template:
    metadata:
      labels:
        app: checkoutservice-online-boutique
    spec:
      serviceAccountName: checkoutservice-online-boutique
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
        - name: dockerhub-key
      containers:
        - name: server
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [-ALL]
            privileged: false
            readOnlyRootFilesystem: true
          image: kihpn1711/checkoutservice-custom:v1 # 🚨 Bro nhớ check xem bản v1 này đã fix logic checkout chưa nhé
          imagePullPolicy: Always
          ports:
          - containerPort: 5050
          readinessProbe:
            initialDelaySeconds: 25 # 🚨 Cho nó 25s để ping các service khác
            grpc:
              port: 5050
          livenessProbe:
            initialDelaySeconds: 25
            grpc:
              port: 5050
          resources:
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-online-boutique
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: checkoutservice-online-boutique
  ports:
  - name: grpc
    port: 5050
    targetPort: 5050
