kubernetes-manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-online-boutique
  namespace: online-boutique
  labels:
    app: frontend-online-boutique
spec:
  selector:
    matchLabels:
      app: frontend-online-boutique
  template:
    metadata:
      labels:
        app: frontend-online-boutique
    spec:
      serviceAccountName: frontend-online-boutique
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
        - name: dockerhub-key
      containers:
        - name: server
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [-ALL]
            privileged: false
            readOnlyRootFilesystem: true
          image: kihpn1711/frontend-custom:v2 # 🚨 Đúng bản v2 bro vừa build
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 15 # 🚨 Tăng nhẹ thời gian chờ cho chắc
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-readiness-probe"
          livenessProbe:
            initialDelaySeconds: 15
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-liveness-probe"
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-online-boutique
  namespace: online-boutique
  labels:
    app: frontend-online-boutique
spec:
  type: ClusterIP
  selector:
    app: frontend-online-boutique
  ports:
  - name: http
    port: 80
    targetPort: 8080
