kubernetes-manifests/productcatalogservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice-online-boutique
  namespace: online-boutique
  labels:
    app: productcatalogservice-online-boutique
spec:
  selector:
    matchLabels:
      app: productcatalogservice-online-boutique
  template:
    metadata:
      labels:
        app: productcatalogservice-online-boutique
    spec:
      serviceAccountName: productcatalogservice-online-boutique
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
        - name: dockerhub-key
      containers:
      - name: server
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
        image: kihpn1711/productcatalogservice:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3550
        readinessProbe:
          grpc:
            port: 3550
        livenessProbe:
          grpc:
            port: 3550
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice-online-boutique
  namespace: online-boutique
  labels:
    app: productcatalogservice-online-boutique
spec:
  type: ClusterIP
  selector:
    app: productcatalogservice-online-boutique
  ports:
  - name: grpc
    port: 3550
    targetPort: 3550
