kubernetes-manifests/redis-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart-online-boutique
  namespace: online-boutique
  labels:
    app: redis-cart-online-boutique
spec:
  selector:
    matchLabels:
      app: redis-cart-online-boutique
  template:
    metadata:
      labels:
        app: redis-cart-online-boutique
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: redis
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
        image: redis:alpine
        ports:
        - containerPort: 6379
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
        resources:
          requests:
            cpu: 70m
            memory: 200Mi
          limits:
            cpu: 125m
            memory: 256Mi
      volumes:
      - name: redis-data
        emptyDir: {} # 🚨 Tạm thời dùng emptyDir cho nhanh, tối mai mình xử lý NFS sau
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart-online-boutique
  namespace: online-boutique
  labels:
    app: redis-cart-online-boutique
spec:
  type: ClusterIP
  selector:
    app: redis-cart-online-boutique
  ports:
  - name: tcp-redis
    port: 6379
    target_port: 6379
